# concreteness-checker

./: README.md  SKILL.md  pyproject.toml
src/concreteness_checker/: __init__.py  analyzer.py  cli.py  norms.py
